platform/baseline/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-system
  labels:
    app.kubernetes.io/managed-by: platform-engineering-lab
    platform.engineering-lab/environment: local
    platform.engineering-lab/owner: platform-team
    platform.engineering-lab/purpose: shared-services
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.35
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.35
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.35
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform-apps
  labels:
    app.kubernetes.io/managed-by: platform-engineering-lab
    platform.engineering-lab/environment: local
    platform.engineering-lab/owner: platform-team
    platform.engineering-lab/purpose: application-workloads
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.35
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.35
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.35
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    app.kubernetes.io/managed-by: platform-engineering-lab
    platform.engineering-lab/environment: local
    platform.engineering-lab/owner: platform-team
    platform.engineering-lab/purpose: telemetry-services
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.35
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.35
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.35
---
apiVersion: v1
kind: Namespace
metadata:
  name: security
  labels:
    app.kubernetes.io/managed-by: platform-engineering-lab
    platform.engineering-lab/environment: local
    platform.engineering-lab/owner: platform-team
    platform.engineering-lab/purpose: security-services
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.35
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.35
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.35
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitops
  labels:
    app.kubernetes.io/managed-by: platform-engineering-lab
    platform.engineering-lab/environment: local
    platform.engineering-lab/owner: platform-team
    platform.engineering-lab/purpose: delivery-controllers
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.35
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.35
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.35
